[package]
name = "database_macros"
version = "0.1.1"
edition = "2018"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"

[dev-dependencies]
anyhow = "1.0.75"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
strum = "0.25"
strum_macros = "0.25"
libsql-client = { git = "https://github.com/samishoux/libsql-client-rs" }
serde = "1.0.190"
tokio = "1.33.0"
